fixed missing parameter

--- a/.github/workflows/main_nr-waf-nlab-wa.yml
+++ b/.github/workflows/main_nr-waf-nlab-wa.yml
@@ -35,8 +35,8 @@ jobs:
           name: node-app
           path: release.zip
 
-      - name: unzip artifact for deployment
-        run: unzip release.zip
+      - name: Unzip artifact for deployment
+        run: unzip -o release.zip
 
   deploy:
     runs-on: ubuntu-latest
