Revert "Update main_nr-waf-nlab-wa.yml"
This reverts commit 0b4bc62fc923e0c7589e1ccc98158060694f2dbc.

--- a/.github/workflows/main_nr-waf-nlab-wa.yml
+++ b/.github/workflows/main_nr-waf-nlab-wa.yml
@@ -57,5 +57,5 @@ jobs:
         with:
           app-name: 'nr-waf-nlab-wa'
           slot-name: 'Production'
-          publish-profile: 'nlab.works'
+          publish-profile: ${{ secrets.AZUREAPPSERVICE_PUBLISHPROFILE_D5BABBAF421C4720B4A1BEC0B36B92E7 }}
           package: .
