--- a/.github/workflows/main_nr-waf-nlab-wa.yml
+++ b/.github/workflows/main_nr-waf-nlab-wa.yml
@@ -43,7 +43,8 @@ jobs:
     needs: build
     environment:
       name: 'Production'
-      url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
+      url: 'http://nlab.works'
+      # url: ${{ steps.deploy-to-webapp.outputs.webapp-url }}
 
     steps:
       - name: Download artifact from build job
